SERVER-32637 update oldest_timestamp on PV0 secondaries