src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -1052,6 +1052,8 @@ void WiredTigerKVEngine::setOldestTimestamp(Timestamp oldestTimestamp) {
     invariantWTOK(_conn->set_timestamp(_conn, commitTSConfigString));
 
     _oplogManager->setOplogReadTimestamp(oldestTimestamp);
+
+    stdx::unique_lock<stdx::mutex> lock(_oplogManagerMutex);
     _previousSetOldestTimestamp = oldestTimestamp;
     LOG(1) << "Forced a new oldest_timestamp. Value: " << oldestTimestamp;
 }
@@ -1062,6 +1064,7 @@ void WiredTigerKVEngine::advanceOldestTimestamp(Timestamp oldestTimestamp) {
         return;
     }
 
+    Timestamp timestampToSet;
     {
         stdx::unique_lock<stdx::mutex> lock(_oplogManagerMutex);
         if (!_oplogManager) {
@@ -1078,11 +1081,12 @@ void WiredTigerKVEngine::advanceOldestTimestamp(Timestamp oldestTimestamp) {
                 return;
             }
         }
+
+        // Lag the oldest_timestamp by one timestamp set, to give a bit more history.
+        timestampToSet = _previousSetOldestTimestamp;
+        _previousSetOldestTimestamp = oldestTimestamp;
     }
 
-    // Lag the oldest_timestamp by one timestamp set, to give a bit more history.
-    auto timestampToSet = _previousSetOldestTimestamp;
-    _previousSetOldestTimestamp = oldestTimestamp;
     if (timestampToSet == Timestamp()) {
         // Nothing to set yet.
         return;
